add images and text

--- a/index.html
+++ b/index.html
@@ -4,9 +4,24 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>QR code component</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    
+  <div id="one">
+    <div id="white">
+
+            <img src="./images/image-qr-code.png" alt="">
+<div id="text">
+    <h3>
+        Improve your front-end skills by building projects
+    </h3>
+    <p>
+        Scan the QR code to visit Frontend mentor and take 
+        your coding skills to the next level
+    </p>
+</div>
+    </div>
+  </div>  
 </body>
 </html>
